--- a/DistroMemory/distro-memory/src/tile.css
+++ b/DistroMemory/distro-memory/src/tile.css
@@ -1,20 +1,48 @@
-.token {
+.flip-tile {
+  background-color: transparent;
   width: 100px;
   height: 100px;
-  border-radius: 5px;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-  background-color: whitesmoke;
   margin: 10px;
+  perspective: 500px;
 }
 
-.tomato {
+.inner-tile {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+/*
+.flip-tile:hover .inner-tile {
+  transform: rotateY(180deg);
+}
+*/ 
+.flipped {
+  transform: rotateY(180deg);
+}
+
+.tile-back, .tile-front {
+  border-radius: 5px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.tile-front {
   background-color: tomato;
 }
 
-.steelblue {
-  background-color: steelblue;
+.tile-back {
+  background-color: limegreen;
+  transform: rotateY(180deg);
 }
 
-.green {
-  background-color: limegreen;
+.tile-back img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
