--- a/DistroMemory/distro-memory/src/tile.css
+++ b/DistroMemory/distro-memory/src/tile.css
@@ -28,21 +28,28 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 .tile-front {
-  background-color: tomato;
+  background-color: limegreen;;
+}
+
+.tile-front img {
+  width: 70px;
+  height: 70px;
+  padding: 15px;
+  opacity: 0.7;
 }
 
 .tile-back {
-  background-color: limegreen;
+  background-color: whitesmoke;
   transform: rotateY(180deg);
 }
 
 .tile-back img {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0px;
-  left: 0px;
+  width: 60px;
+  height: 60px;
+  background-color: transparent;
+  padding: 20px;
 }
