Added numbered tiles

--- a/DistroMemory/distro-memory/src/tile.css
+++ b/DistroMemory/distro-memory/src/tile.css
@@ -53,3 +53,13 @@
   background-color: transparent;
   padding: 20px;
 }
+
+.tile-back p {
+  width: 70px;
+  height: 70px;
+  margin: 15px;
+  text-align: center;
+  font-size: 50px;
+  line-height: 70px;
+}
+
