--- a/DistroMemory/distro-memory/src/tile.css
+++ b/DistroMemory/distro-memory/src/tile.css
@@ -1,8 +1,7 @@
 .flip-tile {
   background-color: transparent;
-  width: 100px;
-  height: 100px;
-  margin: 10px;
+  width: 100%;
+  height: 100%;
   perspective: 500px;
 }
 
@@ -36,9 +35,9 @@
 }
 
 .tile-front img {
-  width: 70px;
-  height: 70px;
-  padding: 15px;
+  width: 70%;
+  height: 70%;
+  padding: 15%;
   opacity: 0.7;
 }
 
@@ -48,16 +47,16 @@
 }
 
 .tile-back img {
-  width: 60px;
-  height: 60px;
+  width: 60%;
+  height: 60%;
   background-color: transparent;
-  padding: 20px;
+  padding: 20%;
 }
 
 .tile-back p {
-  width: 70px;
-  height: 70px;
-  margin: 15px;
+  width: 70%;
+  height: 70%;
+  margin: 15%;
   text-align: center;
   font-size: 50px;
   line-height: 70px;
