--- a/DistroMemory/distro-memory/src/index.css
+++ b/DistroMemory/distro-memory/src/index.css
@@ -11,68 +11,10 @@
 body {
   font-family: sans-serif;
   margin: 0px;
-  height: 100%;
+  height: 100vh;
   font-size: .8em;
-  
-  background-color: var(--grey);
-  background-image:
-    linear-gradient(
-      25deg,
-      transparent 65%,
-      var(--darkgrey),
-      transparent 70%
-    ),
-    linear-gradient(
-      -25deg,
-      transparent 65%,
-      var(--darkgrey),
-      transparent 70%
-    ),
-    linear-gradient(
-      -25deg,
-      transparent 30%,
-      var(--darkgrey),
-      transparent 35%
-    ),
-    linear-gradient(
-      25deg,
-      transparent 30%,
-      var(--darkgrey),
-      transparent 35%
-    ),  
-
-    linear-gradient(
-      65deg,
-      transparent 65%,
-      var(--darkgrey),
-      transparent 70%
-    ),
-    linear-gradient(
-      -65deg,
-      transparent 65%,
-      var(--darkgrey),
-      transparent 70%
-    ),
-    linear-gradient(
-      -65deg,
-      transparent 30%,
-      var(--darkgrey),
-      transparent 35%
-    ),
-    linear-gradient(
-      65deg,
-      transparent 30%,
-      var(--darkgrey),
-      transparent 35%
-    );
-  background-size: 
-    5em 2em,
-    5em 2em,
-    5em 2em,
-    5em 2em,
-    
-    2em 5em,
-    2em 5em,
-    2em 5em,
-    2em 5em;
+  background-color: var(--grey); 
+  background-image: 
+    repeating-linear-gradient(to right, transparent 0px, transparent 20px, #d73d6c1f 20px, #d73d6c1f 40px),
+    repeating-linear-gradient(to bottom, transparent 0px, transparent 20px, #d73d6c1f 20px, #d73d6c1f 40px);
 }
