--- a/DistroMemory/distro-memory/src/board/board.css
+++ b/DistroMemory/distro-memory/src/board/board.css
@@ -1,9 +1,12 @@
 .board {
-  width: 800px;
-  height: 600px;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
   display: grid;
   grid-template: repeat(6, 1fr) / repeat(8, 1fr);
-  background-color: whitesmoke;
   justify-items: center;
   align-items: center;
   grid-gap: 20px;
