Organize board component

--- a/DistroMemory/distro-memory/src/play/board/tile/tile.css
+++ b/DistroMemory/distro-memory/src/play/board/tile/tile.css
@@ -1,7 +1,16 @@
+:root {
+  --pink: #d73d6c;
+  --salmon: #d57276;
+  --beige: #d6c2bc;
+  --grey: #c0cccc;
+  --blue: #65b2c6;
+}
+
 .flip-tile {
+  width: 100px;
+  height: 100px;
+  margin: auto;
   background-color: transparent;
-  width: 100%;
-  height: 100%;
   perspective: 500px;
 }
 
@@ -22,7 +31,7 @@
 }
 
 .tile-back, .tile-front {
-  border-radius: 5px;
+  border-radius: 10px;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -30,30 +39,30 @@
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
-.tile-front {
-  background-color: limegreen;;
+.tile-back {
+  background-color: whitesmoke;
 }
 
-.tile-front img {
+.tile-back img {
   width: 70%;
   height: 70%;
   padding: 15%;
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
-.tile-back {
+.tile-front {
   background-color: whitesmoke;
   transform: rotateY(180deg);
 }
 
-.tile-back img {
+.tile-front img {
   width: 60%;
   height: 60%;
   background-color: transparent;
   padding: 20%;
 }
 
-.tile-back p {
+.tile-front p {
   width: 70%;
   height: 70%;
   margin: 15%;
